<resources>
    <string name="app_name">BlaBlaWild</string>
    <string name="action_settings">Settings</string>
    <string name="search_an_intinerary">SEARCH AN INTINERARY</string>
    <string name="search_text">Search</string>
    <string name="destnation">Destnation</string>
    <string name="departure">Departure</string>
    <string name="date">Date</string>
    <string name="hintHours">Hours</string>
    <string name="hintKilometers">Kilometers</string>
    <string name="hintModel">Model</string>
    <string name="hintBrand">Brand</string>
    <string name="hintButtonSend">SEND</string>
    <string name="hintSpeed">Speed</string>

    <string-array name="vehicleList">
        <item>Please select..</item>
        <item>Car</item>
        <item>Boat</item>
        <item>Plane</item>
    </string-array>
</resources>
